# ARIAC

./: .gitignore  README.md
ariac-docker/team_config/nist_team/log/: latest_list
controller_pausing/: CMakeLists.txt  package.xml
controller_pausing/src/: controller_pauser.cpp
nist_gear/: CMakeLists.txt
nist_gear/config/trial_config/agility_challenges/: faulty_gripper_over_agv_sample.yaml  faulty_gripper_over_bin_sample.yaml  faulty_parts_sample.yaml  faulty_sensors_sample.yaml  flipped_parts_sample.yaml  hpo_unwanted_products_sample.yaml  hpo_wanted_products_sample.yaml  human_obstacles_sample.yaml  insufficient_parts_sample.yaml  robot_breakdown_sample.yaml
nist_gear/config/trial_config/dev/: dev.yaml
nist_gear/config/trial_config/manufacturing_tasks/: assembly_sample.yaml  kitting_assembly_sample.yaml  kitting_sample.yaml
nist_gear/config/trial_config/qualifiers/: qual_a.yaml
nist_gear/config/user_config/: sample_user_config.yaml
nist_gear/include/: AriacGantryTrayPlugin.hh
nist_gear/include/nist_gear/: ARIAC.hh  TaskManagerPlugin.hh
nist_gear/launch/: gear.urdf.xacro.template  sample_environment.launch
nist_gear/robots/gantry/gantry_description/urdf/: gantry.urdf.xacro.template
nist_gear/script/: GearSpawner.sh  gear.py
nist_gear/src/: AriacGantryTrayPlugin.cc  AriacScorer.cpp  AriacTaskManagerPlugin.cc  ControllerPauser.cc  TaskManagerPlugin.cc
nist_gear/worlds/: ariac.world.template
test_competitor/config/tasks_config/: kitting.yaml
wiki/documentation/: configuration_files.md  scoring.md
wiki/misc/: updates.md
